# interpretune

./: .codecov.yml  .env.localhost_np.example  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  SECURITY.md  comprehensive_fixture_benchmark.py  gpu_fixture_benchmark.py  interpretune.pyi  pyproject.toml  regen_diff.patch
.azure-pipelines/: gpu-tests.yml
.github/: LABELS.md  copilot-instructions.md  issue-labeler.yml  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/instructions/: analysis_injection.instructions.md  copilot-instructions.md  developing_adapters.instructions.md  fixture_usage.instructions.md  registering_example_modules.instructions.md  updating_expected_results.instructions.md
.github/prompts/: fix_precommit_issues.prompt.md  gen_commit_summary_agent.prompt.md  gen_missing_cov_module_agent.prompt.md  gen_missing_cov_module_edit.prompt.md  gen_missing_cov_object_edit.prompt.md  generate_missing_module_coverage.prompt.md  more_autonomous_generate_missing_module_coverage.prompt.md
.github/workflows/: check-benchmark-registry.yml  ci_test-full.yml  copilot-setup-steps.yml  docs-build.yml  env-build-smoke.yml  labeler.yml  regen-check.yml  regen-ci-req-check.yml  regen-ci-req-report.yml  regen-report.yml  release_pypi.yml  type-check.yml
dockers/: build_image_version.sh  docker_images_main.sh  docker_images_release.sh
dockers/base-cuda/: Dockerfile
dockers/it-az-base/: .bashrc  Dockerfile
docs/: CIRCUIT_TRACER_INSTALLATION.md  adapter_development_guide.md  analysis_injection_usage.md  analysis_runner_usage.md  analysis_store_serialization.md  apply_chat_template_proposal.md  bridge_ht_divergence_analysis.md  cache_behavior.md  circuit_tracer_backend_support.md  circuit_tracer_intervention_apis.md  custom_ops_composition_guide.md  developer_multi_repo_setup.md  framework_level_adapters.md  fts_transformerlens_integration.md  generation_precedence.md  ht_bridge_parity_behavior.md  ht_vs_bridge_source_of_truth.md  interpretune_intervention_apis.md  intervention_hook_pattern_support.md  neuronpedia_dashboard_pipeline.md  nnsight_multi_invoke_analysis.md  protocol_architecture_working_design.md  resource_management.md  sae_hook_resolution_design.md  session_module_datamodule_usage.md  tl_config_hierarchy_overview.md  tl_style_naming_implementation.md  transformer_bridge_architecture.md  transformer_lens_changes.md
docs/source/: api.rst  concepts.md  conf.py  configuration.md  design_rationale.md  index.md  roadmap.md
requirements/: base.txt  ci_constraints.txt  ci_reqs.in  ci_reqs.txt  circuit_tracer_pin.txt  collect_env_details.py  ct_deps.txt  devel.txt  docs.txt  examples.txt  lightning.txt  platform_dependent.txt  post_upgrades.txt  regen_reqfiles.py  test.txt
requirements/ci/: circuit_tracer_pin.txt  excludes.txt  nodeps_git_requirements.txt  overrides.txt  requirements.in  requirements.txt  sl_uv_requirements.txt  torch-override.txt  torch-pre.txt
requirements/utils/: collect_env_details.py  lock_ci_requirements.sh  prune_torch_deps.py  regen_reqfiles.py
scripts/: TEST_COVERAGE_ANALYSIS_README.md  analyze_coverage_overlap.sh  analyze_test_coverage.py  analyze_test_redundancy.sh  build_it_env.sh  check_benchmark_registry_isolation.py  ci_print_env_versions.py  ci_resource_monitor.sh  collect_it_profiling_results.sh  dashboard_benchmark_artifacts.py  dashboard_benchmark_suite_usage.md  gen_it_coverage.sh  generate_neuronpedia_feature_explanation.py  generate_op_stubs.py  infra_utils.sh  launch_neuronpedia_dashboard_pipeline.py  manage_coverage_process.sh  manage_standalone_processes.sh  manage_standalone_regex.cfg  preserve_neuronpedia_reference_artifacts.py  pretokenize_dashboard_dataset.py  profile_neuronpedia_dashboard_generation.py  publish_notebooks.py  regen_summary.py  resource_debug_summary.py  run_dashboard_benchmark_suite.py  run_nbstripout_hook.py  setup_dashboard_benchmark_env.py  speedscope_top_packages.py  sweep_neuronpedia_dashboard_configs.py  update_profiling_memory_stats.sh
scripts/benchmark_baseline_patches/: README.md  saedashboard-7886eaa-activation-significance-floor.patch  saedashboard-7886eaa-no-shuffle-tokens.patch  saedashboard-7886eaa-profiling.patch  saedashboard-7886eaa-shared-tokens-file.patch
scripts/templates/: dashboard_profiling_notebook_template.ipynb
src/interpretune/: __about__.py  __init__.py  __init__.pyi  adapter_registry.py  instantiate_only.py  lightning_instantiate_only.py  lightning_run_experiment.py  metadata.py  module_registry.yaml  protocol.py  registry.py  run_experiment.py  session.py
src/it_examples/: __init__.py  example_module_registry.py  example_module_registry.yaml  example_prompt_configs.py  raw_graph_analysis.py  test_examples.py
src/reasonable_interpretation/: __about__.py  instantiate_only.py  run_experiment.py
tests/: .experiments  BRIDGE_MIGRATION_PLAN.md  FIXTURE_ANALYSIS.md  PROFILING.md  README.md  __init__.py  _lazy_imports.py  adding_new_example_modules.md  analysis_resource_utils.py  base_defaults.py  configuration.py  conftest.py  data_generation.py  dynamic_fixture_benchmark.py  fixture_benchmark_report.md  global_defaults.py  modules.py  orchestration.py  profiling_tests.sh  results.py  runif.py  special_tests.sh  standalone_tests.sh  test_module_registry.py  test_utils.sh  utils.py  warns.py
tests/base/: cfg_aliases.py  expected.py  modules.py  test_interpretune_base.py
tests/benchmarks/: README.md  benchmark_registry.yaml  benchmark_utils.py  run_benchmarks.py  test_benchmarks.py  test_collect_env_details.py
tests/concept_direction_approach_parity/: HYPOTHESES.md  README.md  V3_ANALYSIS.md  concept_direction.py  concept_direction_analysis.md  concept_direction_approach_experimentation.py  concept_direction_experiment_harness.ipynb  concept_direction_experiment_utils.py  concept_direction_template.ipynb  diagnostic.py  experiment_resource_utils.py  experimental_summaries.md  intervention_pipeline_debugging_mode.md  nb_experiment_launcher.py  (+7 more)
(+768 files in other folders)
